Auth module & Server render

--- a/src/client/auth/index.html
+++ b/src/client/auth/index.html
@@ -7,10 +7,10 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <base href="/">
   <link rel="stylesheet" href="/client/assets/style.css">
-  <title>PharmLogistics</title>
+  <title>PharmLogistics | Auth</title>
 </head>
 <body>
   <app></app>
 </body>
-<script src="static/app/scripts.js"></script>
+<script src="static/auth/scripts.js"></script>
 </html>
